<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.splash.SplashActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="294dp"
        android:layout_height="233dp"
        android:src="@drawable/splash_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/bagikan_pengalamanmu_sekarang_disini"
        android:textAlignment="center"
        android:textColor="@color/mainColor"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:alpha="0"
        tools:alpha="100" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/selamat_datang_di_story_app_aplikasi_ini_adalah_aplikasi_submission_dari_salah_satu_siswa_dicoding_dan_digunakan_untuk_tempat_untuk_membagikan_pengalaman_pengguna"
        android:textAlignment="center"
        android:textColor="@color/mainColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:alpha="0"
        tools:alpha="100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDaftar"
        android:layout_width="276dp"
        android:layout_height="58dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/mainColor"
        android:text="@string/daftar"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:alpha="0"
        tools:alpha="100"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="276dp"
        android:layout_height="58dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:text="@string/masuk"
        android:textColor="@color/mainColor"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:strokeColor="@color/mainColor"
        app:strokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDaftar"
        android:alpha="0"
        tools:alpha="100"/>

</androidx.constraintlayout.widget.ConstraintLayout>