<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.register.RegisterActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/ayo_daftarkan_dirimu"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/bergabunglah_dengan_kami_dan_mulailah_bagikanlah_ceritamu"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:alpha="0"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/nama"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/namaUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/namaUser"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:alpha="0"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/emailUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailUser"
        app:layout_constraintTop_toBottomOf="@+id/namaUser"
        android:alpha="0"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/password"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/passUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passUser"
        app:layout_constraintTop_toBottomOf="@+id/emailUser"
        android:alpha="0"
        tools:alpha="100"/>

    <com.rizkifauzi.storyapp.view.component.ETNama
        android:id="@+id/namaUser"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"

        app:errorEnabled="true"
        android:alpha="0"
        tools:alpha="100"/>

    <com.rizkifauzi.storyapp.view.component.ETEmail
        android:id="@+id/emailUser"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"

        app:errorEnabled="true"
        android:alpha="0"
        tools:alpha="100"/>

    <com.rizkifauzi.storyapp.view.component.ETPass
        android:id="@+id/passUser"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:alpha="0"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/tVnanya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sudah_punya_akun"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tVBtnNanya"
        app:layout_constraintEnd_toStartOf="@+id/tVBtnNanya"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tVBtnNanya"
        app:layout_constraintVertical_bias="0.0"
        android:alpha="0"
        tools:alpha="100"/>

    <TextView
        android:id="@+id/tVBtnNanya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="116dp"
        android:text="@string/masuk"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passUser"
        android:alpha="0"
        tools:alpha="100"/>

    <com.rizkifauzi.storyapp.view.component.MySubmitButton
        android:id="@+id/submitDaftar"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVBtnNanya"
        android:alpha="0"
        tools:alpha="100"/>

    <ImageView
        android:id="@+id/back"
        android:layout_width="34dp"
        android:layout_height="28dp"
        android:src="@drawable/baseline_keyboard_backspace_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

</androidx.constraintlayout.widget.ConstraintLayout>